[gd_scene load_steps=24 format=2]

[ext_resource path="res://Objects/Burger/Burger.gd" type="Script" id=1]
[ext_resource path="res://Objects/Burger/burger_spritesheet.png" type="Texture" id=2]
[ext_resource path="res://Objects/Burger/munch.mp3" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 62, 60 )

[sub_resource type="AtlasTexture" id=21]
flags = 13
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 168, 128 )

[sub_resource type="AtlasTexture" id=22]
flags = 13
atlas = ExtResource( 2 )
region = Rect2( 168, 0, 168, 128 )

[sub_resource type="AtlasTexture" id=23]
flags = 13
atlas = ExtResource( 2 )
region = Rect2( 336, 0, 168, 128 )

[sub_resource type="AtlasTexture" id=24]
flags = 13
atlas = ExtResource( 2 )
region = Rect2( 504, 0, 168, 128 )

[sub_resource type="AtlasTexture" id=25]
flags = 13
atlas = ExtResource( 2 )
region = Rect2( 672, 0, 168, 128 )

[sub_resource type="AtlasTexture" id=26]
flags = 13
atlas = ExtResource( 2 )
region = Rect2( 0, 128, 168, 128 )

[sub_resource type="AtlasTexture" id=27]
flags = 13
atlas = ExtResource( 2 )
region = Rect2( 168, 128, 168, 128 )

[sub_resource type="AtlasTexture" id=28]
flags = 13
atlas = ExtResource( 2 )
region = Rect2( 336, 128, 168, 128 )

[sub_resource type="AtlasTexture" id=29]
flags = 13
atlas = ExtResource( 2 )
region = Rect2( 504, 128, 168, 128 )

[sub_resource type="AtlasTexture" id=30]
flags = 13
atlas = ExtResource( 2 )
region = Rect2( 672, 128, 168, 128 )

[sub_resource type="AtlasTexture" id=31]
flags = 13
atlas = ExtResource( 2 )
region = Rect2( 0, 256, 168, 128 )

[sub_resource type="AtlasTexture" id=32]
flags = 13
atlas = ExtResource( 2 )
region = Rect2( 168, 256, 168, 128 )

[sub_resource type="AtlasTexture" id=33]
flags = 13
atlas = ExtResource( 2 )
region = Rect2( 336, 256, 168, 128 )

[sub_resource type="AtlasTexture" id=34]
flags = 13
atlas = ExtResource( 2 )
region = Rect2( 504, 256, 168, 128 )

[sub_resource type="AtlasTexture" id=35]
flags = 13
atlas = ExtResource( 2 )
region = Rect2( 672, 256, 168, 128 )

[sub_resource type="AtlasTexture" id=36]
flags = 13
atlas = ExtResource( 2 )
region = Rect2( 0, 384, 168, 128 )

[sub_resource type="AtlasTexture" id=37]
flags = 13
atlas = ExtResource( 2 )
region = Rect2( 168, 384, 168, 128 )

[sub_resource type="AtlasTexture" id=38]
flags = 13
atlas = ExtResource( 2 )
region = Rect2( 336, 384, 168, 128 )

[sub_resource type="SpriteFrames" id=20]
animations = [ {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[node name="Burger" type="Node2D"]
scale = Vector2( 0.8, 0.8 )
script = ExtResource( 1 )

[node name="BurgerArea" type="Area2D" parent="."]
scale = Vector2( 0.5, 0.5 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="BurgerArea"]
scale = Vector2( 2, 2 )

[node name="BurgerCollisionShape" type="CollisionShape2D" parent="BurgerArea"]
position = Vector2( 2, -1 )
shape = SubResource( 1 )

[node name="BurgerAnimation" type="AnimatedSprite" parent="BurgerArea"]
frames = SubResource( 20 )
frame = 10
playing = true

[node name="MunchPlayer" type="AudioStreamPlayer" parent="BurgerArea"]
stream = ExtResource( 3 )
volume_db = -18.0

[connection signal="body_shape_entered" from="BurgerArea" to="." method="_on_BurgerArea_body_shape_entered"]
